--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.3.2",
     "three": "^0.145.0",
+    "three-globe": "^2.18.8",
+    "three-glow-mesh": "^0.1.2",
     "tsparticles": "^2.3.2",
     "web-vitals": "^2.1.4"
   },
